--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -24,10 +24,13 @@
 .show {
   transform: translateY(0);
 }
+.nav-left {
+  width: 20vw;
+}
 
 .nav-left > a > img {
   height: 5vw;
-  margin-left: 4%;
+  margin-left: 2rem;
 }
 
 .nav-mid {
@@ -221,7 +224,6 @@
     height: 9vw;
     width: auto;
     padding: 0px;
-    margin-left: -30%;
   }
 
   .navbar {
@@ -269,13 +271,20 @@
   }
 
   .nav-left {
-    width: 33%;
-    padding: 0 0 0 4%;
+    width: 30%;
+    padding: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .nav-left > a > img {
     height: 7vh;
     margin: 0;
+    margin-left: 0.5rem;
+  }
+  .mujlogo {
+    height: 8vh !important;
   }
 
   .nav-mid {
