--- a/src/styles/CampusHero.css
+++ b/src/styles/CampusHero.css
@@ -67,12 +67,11 @@ h1:nth-child(1) {
   position: relative;
   z-index: 2;
   width: 100vw;
-  height: 3px;
+  height: 3px !important;
   background-color: black;
   margin-top: 40.6vh;
   display: flex; /* Use flexbox to align the button */
   justify-content: flex-end; /* Align button to the right */
-  padding: 1rem; /* Add some padding */
 }
 
 @media (max-width: 500px) {
