--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 .hero-wrapper {
   display: flex;
@@ -6,11 +6,10 @@
   justify-content: space-around;
   width: 100%;
   height: 100vh;
-  background-color: #EAE9FF;
-  font-family: 'Rubik', sans-serif;
+  background-color: #eae9ff;
+  font-family: "Rubik", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-
 }
 
 .hero-bg-img {
@@ -47,17 +46,17 @@
 }
 
 .unstop-img-div {
-  padding-left: .25rem;
-  padding-right: .25rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
   --tw-bg-opacity: 1;
   /* background-color: rgb(255 255 255); */
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.unstop-img-div>img {
+.unstop-img-div > img {
   height: 2.3vw;
 }
 
@@ -73,7 +72,7 @@
 } */
 
 .hero-bottom {
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   border-radius: 35px;
   height: 50%;
   margin: 0 4%;
@@ -104,7 +103,6 @@
   transform: scale(1.1);
 }
 
-
 .hero-bottom-left {
   width: 28%;
   line-height: 0.75;
@@ -118,7 +116,7 @@
 }
 
 .hero-bottom-left-text {
-  color: #827DFF;
+  color: #827dff;
   font-size: 4vw;
 }
 
@@ -157,7 +155,6 @@
   justify-content: space-around;
   align-items: center;
   height: 100%;
-
 }
 
 .hero-bottom-right-register-btn {
@@ -169,7 +166,6 @@
   font-size: 1.5vw;
   margin-top: 7vh;
   transition: transform 0.3s ease, border 0.3s ease;
-  ;
   cursor: pointer;
 }
 
@@ -183,13 +179,13 @@
   text-align: justify;
 }
 
-.hero-bottom-right-about>span {
+.hero-bottom-right-about > span {
   font-weight: 400;
   font-size: 1.8vw;
 }
 
-.hero-bottom-right-about>p {
-  color: #8E8E8E;
+.hero-bottom-right-about > p {
+  color: #8e8e8e;
   line-height: 1.2;
   font-size: 1.1vw;
   text-align: left;
@@ -222,13 +218,13 @@
   }
 
   .unstop-img-div {
-    padding-left: .25rem;
-    padding-right: .25rem;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
     --tw-bg-opacity: 1;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
   }
 
-  .unstop-img-div>img {
+  .unstop-img-div > img {
     height: 6vw;
   }
 
@@ -301,14 +297,13 @@
   .hero-bottom-right-about {
     padding: 6vw 4vw 0 4vw;
     font-size: 4vw;
-
   }
 
-  .hero-bottom-right-about>span {
+  .hero-bottom-right-about > span {
     font-size: 6vw;
   }
 
-  .hero-bottom-right-about>p {
+  .hero-bottom-right-about > p {
     font-size: 3vw;
     line-height: 1.3;
   }
