--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -131,88 +131,11 @@
   width: 95% !important;
 }
 
-/* .hamburger {
-  font-size: 5vh;
-  cursor: pointer;
-  padding: 1.5rem;
-  padding-right: 4%;
-  color: black;
-  z-index: 2000;
-  display: block;
-}
-
-.hamburger.hide {
-  display: none;
-}
-
-.hamburger-close {
-  font-size: 5vh;
-  cursor: pointer;
-  padding: 1.5rem;
-  padding-right: 5%;
-  color: black;
-  z-index: 2000;
-  display: none;
-}
-
-.hamburger-close.active {
-  display: block;
-} */
-
-/* .menu {
-  position: fixed;
-  top: 7vh;
-  right: -100%;
-  width: 50%;
-  height: 50vh;
-  background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(10px);
-  z-index: 2000;
-  transition: right 0.3s ease;
-  overflow-y: auto;
-  overflow-x: hidden;
-} */
-
-/* .menu.active {
-  right: 0;
-  right: 0;
-  top: 7vh;
-  left: 0;
-  width: 100vw;
-} */
-
-/* .menu-links {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  width: 100%;
-} */
-
-/* .menu-links .nav-link {
-  font-size: 2.5vh;
-  padding: 1.5vh 3vh;
-  color: black;
-  background: none;
-  border: none;
-  text-align: center;
-  width: 100%;
-} */
-
-/* Add black border between each menu item */
-/* .menu-links .nav-link:not(:last-child) {
-  border-bottom: 2px solid black;
-} */
-
 .mobileMenu-links {
   margin: 0;
   padding: 0;
   list-style: none;
+  background: rgba(255, 255, 255, 0.2);
   display: none;
 }
 
@@ -234,7 +157,7 @@
   height: 3px;
   background-color: #000000;
   display: block;
-  transition: .3s;
+  transition: .5s;
 }
 
 .nav-toggler span:before {
@@ -263,9 +186,32 @@
 /* mobile */
 @media (max-width: 768px) {
 
-  .nav-left{
+  .nav-left {
     width: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
+
+  .nav-left>a {
+    display: flex;
+    align-items: center;
+  }
+
+  .nav-left>a>img {
+    height: 8vw;
+    margin-left: 1rem;
+  }
+
+  .mujlogo {
+    height: 10vh;
+  }
+
+  .navbar {
+    min-height: fit-content;
+    height: 10vh;
+  }
+
   .nav-mid {
     display: none;
   }
@@ -282,17 +228,15 @@
     display: flex;
     position: absolute;
     width: 100%;
-    height: calc(100vh - 60px);
-    /* change height of navbar from 60px to whatever*/
+    height: 90vh;
     left: 0;
-    top: 60px;
+    top: 10vh;
     flex-direction: column;
     align-items: center;
-    border-top: 1px solid #444;
     background-color: rgba(0, 0, 0, .75);
     max-height: 0;
     overflow: hidden;
-    transition: .3s;
+    transition: .5s;
   }
 
   .mobileMenu-link {
@@ -309,7 +253,6 @@
   }
 
   .mobileMenu-link>a:hover {
-    /* background: rgba(255, 255, 255, .1); */
     background-color: rgba(255, 255, 255, .1);
   }
 
@@ -318,55 +261,57 @@
     overflow: visible;
   }
 
-  /* .nav-link {
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    color: black;
-    cursor: default;
-    font-size: 1.4vh;
-    font-weight: 400;
-    min-width: 6vw;
-    height: 5vh;
-  }
-
-  a {
-    text-decoration: none;
-    color: inherit;
-    font-size: 1.4vh;
-  }
-
-  .nav-left {
-    margin-left: 0%;
-    padding: 0px;
-  }
-
-  .nav-left>a>img {
-    height: 9vw;
-    width: auto;
-    padding: 0px;
-    margin: 0%;
-  }
-
-  .nav-left>a>img .mujlogo {
-  .nav-left > a > img .mujlogo {
-    padding: 2%;
-    margin: 0%;
-    justify-content: left;
-  }
-
-  .navbar {
-    height: 18vw;
-    display: flex;
-    align-content: center;
-  } */
 }
 
 @media (min-width: 768px) {
 
+  .navbar{
+    height: 9vh;
+  }
+
   .nav-mid,
   .nav-right {
     display: flex;
+  }
+
+  .nav-mid {
+    width: 34%;
+    flex-grow: 1;
+    justify-content: center;
+    margin-left: 2rem;
+  }
+
+  .nav-links {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    gap: 2rem;
+  }
+
+  .nav-link {
+    font-weight: 350;
+    border: solid 1px #b0b0b0;
+    border-radius: 2rem;
+    background-color: white;
+    font-size: 1.8vh;
+    padding: 1vh 1.4vw;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 6vw;
+    height: 5vh;
+}
+
+  .nav-link.active {
+    background-color: black;
+    color: white;
+    border: none;
+  }
+
+  .nav-right{
+    width: 20%;
   }
 
   .hamburger,
@@ -375,7 +320,18 @@
     display: none;
   }
 
+  .nav-left {
+    width: fit-content;
+  }
 
+  .nav-left>a>img {
+    height: 3vw;
+    margin-left: 1rem;
+  }
+
+  .mujlogo {
+    height: 4vw !important;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -411,14 +367,13 @@
   }
 
   .nav-left>a>img {
-    height: 7vh;
+    height: 6vh;
     margin: 0;
-    margin-left: 0.5rem;
+    margin-left: 0.7rem;
   }
 
   .mujlogo {
-    height: 9vh !important;
-    transform: translateY(-5px);
+    height: 6.5vh !important;
   }
 
   .nav-mid {
@@ -433,7 +388,6 @@
     align-items: center;
     width: 100%;
     gap: 2rem;
-    /* Added gap to create space between links */
   }
 
   .nav-link {
