--- a/src/styles/AboutHeader.css
+++ b/src/styles/AboutHeader.css
@@ -1,57 +1,110 @@
-.about-heading{
-    font-size: 8rem;
-    text-align: left;
-    margin-left: 13rem;
+.about-heading {
+  font-size: 8rem;
+  text-align: left;
+  margin-left: 13rem;
 }
-.first-div{
-    width: 60vw;
-    height: 60vh;
-    background-color: #bfbcfc;
-    border-radius: 25px;
-    position: absolute;
-    right: 10rem;
-    top: 13rem;
-
+.first-div {
+  width: 60vw;
+  height: 60vh;
+  background-color: #bfbcfc;
+  border-radius: 25px;
+  position: absolute;
+  right: 10rem;
+  top: 13rem;
 }
-.first-div img{
-    width: 80%;
-    height: 80%;
-    position: absolute;
-    top: 2.5rem;
-    right: 5rem;
-    border-radius: 25px;
+.first-div img {
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  top: 2.5rem;
+  right: 5rem;
+  border-radius: 25px;
 }
-.second-div{
-    width: 80vw;
+.second-div {
+  width: 80vw;
+  height: 70vh;
+  background-color: #bc9ad9;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  position: absolute;
+  top: 35rem;
+  z-index: -1;
+}
+.second-div p {
+  color: white;
+  margin-top: 2rem;
+  line-height: 2rem;
+  font-size: 1.2rem;
+  margin-left: 1.5rem;
+}
+.third-div {
+  width: 60vw;
+  height: 60vh;
+  background-color: #ba84fe;
+  position: absolute;
+  right: 0;
+  top: 62rem;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+}
+.third-div p {
+  color: white;
+  margin-top: 2rem;
+  line-height: 2.3rem;
+  font-size: 1.3rem;
+  margin-left: 1.5rem;
+}
+@media (max-width: 800px) {
+  .about-heading {
+    font-size: 3rem;
+    margin-left: 0;
+    text-align: center;
+  }
+  .first-div {
+    position: relative;
+    right: 0;
+    top: 0;
+    margin: auto;
+    width: 90vw;
+    margin-top: 3rem;
+  }
+  .first-div img {
+    position: relative;
+    top: 3.5rem;
+    right: -2rem;
+  }
+  .second-div {
+    width: 90vw;
     height: 70vh;
     background-color: #bc9ad9;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-    position: absolute;
-    top: 35rem;
-    z-index: -1;
-}
-.second-div p{
-    color: white;
-    margin-top: 2rem;
-    line-height: 2rem;
-    font-size: 1.2rem;
-    margin-left: 1.5rem;
-}
-.third-div{
-    width: 60vw;
-    height: 60vh;
-    background-color: #ba84fe;
-    position: absolute;
-    right: 0;
-    top: 62rem;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-}
-.third-div p{
-    color: white;
-    margin-top: 2rem;
-    line-height: 2.3rem;
+    border-radius: 25px;
+    position: relative;
+    z-index: 1;
+    top: 1rem;
+    margin: auto;
+  }
+  .second-div h1 {
+    padding-top: 2rem;
+  }
+  .second-div p {
+    font-size: 1.1rem;
+    margin-top: 0;
+    margin-left: 0;
+    line-height: normal;
+  }
+  .third-div {
+    width: 90vw;
+    height: 70vh;
+    border-radius: 25px;
+    position: relative;
+    z-index: 1;
+    top: 1rem;
+    margin: auto;
+  }
+  .third-div p {
     font-size: 1.3rem;
-    margin-left: 1.5rem;
+    margin-top: 1rem;
+    margin-left: 0;
+    line-height: normal;
+  }
 }
