--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -56,11 +56,11 @@
   align-items: center;
 }
 
-.unstop-img-div>img {
+.unstop-img-div > img {
   height: 2.3vw;
 }
 
-.Hackathon  {
+.Hackathon {
   font-size: 3vw;
   font-style: bold;
   color: #39188c;
@@ -71,7 +71,7 @@
   margin-top: 0.6rem;
 }
 
-.Hackathon-36  {
+.Hackathon-36 {
   font-size: 1vw;
   font-style: bold;
   color: black;
@@ -94,7 +94,7 @@
   margin-bottom: 1.3rem;
 }
 
-.Hourglass-image>img {
+.Hourglass-image > img {
   height: 1vw;
 }
 
@@ -213,26 +213,41 @@
 
 .hero-right-btn-link {
   color: white; /* Makes the text white */
-  text-decoration: none; /* Removes the underline */ 
+  text-decoration: none; /* Removes the underline */
 }
 
 .hero-bottom-right-register-btn:hover {
   transform: scale(1.05);
   border: 2px solid rgb(135, 135, 135);
 }
-
+.teams-button {
+  background-color: black;
+  border: 2px solid transparent;
+  border-radius: 15px;
+  color: white;
+  font-size: 1.5vw;
+  cursor: pointer;
+  width: 15rem;
+  text-align: center;
+  margin-top: 1rem;
+  padding: 0.8rem;
+}
+.teams-button a {
+  text-decoration: none;
+  color: white;
+}
 
 .hero-bottom-right-about {
   padding: 0 1vw 1vw 0;
   text-align: justify;
 }
 
-.hero-bottom-right-about>span {
+.hero-bottom-right-about > span {
   font-weight: 400;
   font-size: 1.8vw;
 }
 
-.hero-bottom-right-about>p {
+.hero-bottom-right-about > p {
   color: #8e8e8e;
   line-height: 1.2;
   font-size: 1.1vw;
@@ -278,7 +293,7 @@
     border-radius: 0.5rem;
   }
 
-  .Hourglass-image>img {
+  .Hourglass-image > img {
     height: 2.5vw;
   }
 
@@ -294,7 +309,7 @@
     border-radius: 0.5rem;
   }
 
-  .unstop-img-div>img {
+  .unstop-img-div > img {
     height: 6vw;
   }
 
@@ -369,15 +384,21 @@
     font-size: 4vw;
   }
 
-  .hero-bottom-right-about>span {
+  .hero-bottom-right-about > span {
     font-size: 6vw;
     padding: 0 2rem;
   }
 
-  .hero-bottom-right-about>p {
+  .hero-bottom-right-about > p {
     font-size: 3vw;
     line-height: 1.3;
     padding-top: 0.5rem;
   }
-  
+  .teams-button {
+    margin: auto;
+    padding: 0.5rem;
+    width: 8rem;
+    font-size: 0.7rem;
+    margin-top: 1rem;
+  }
 }
