--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -231,10 +231,12 @@
   text-align: center;
   margin-top: 1rem;
   padding: 0.8rem;
+  margin-left: 0;
 }
 .teams-button a {
   text-decoration: none;
   color: white;
+  font-weight: 400;
 }
 
 .hero-bottom-right-about {
