--- a/src/styles/Patron.css
+++ b/src/styles/Patron.css
@@ -24,17 +24,26 @@
 @media (max-width: 768px) {
   .content {
     flex-direction: column; /* Stack cards vertically on mobile */
+    justify-content: space-evenly;
     width: 100%;
-    height: 80% !important; /* Allow height to adjust */
+    height: 65% !important; /* Allow height to adjust */
     margin: 0;
     gap: 1rem;
   }
 
   .patron {
-    height: 120vh;
+    height: 100vh;
     margin: 5vh 0; /* Adjust margin for mobile */
   }
   .header h1 {
     font-weight: 300 !important;
+  }
+  .card{
+    width: 45vw !important;
+    height: 50% !important; 
+  }
+  .card img{
+    height: 90% !important;
+    width: 90% !important;
   }
 }
